# pester

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: local-smoke.sh  package-macos.sh  smoke-windows-service.ps1
src/: activity.rs  app.rs  cli.rs  confirm.rs  daemon.rs  lib.rs  main.rs  models.rs  notify.rs  paths.rs  schedule.rs  service.rs  store.rs  term.rs  tray.rs  update.rs  version.rs  windows_ipc.rs
src/notify/: linux.rs  macos.rs  windows.rs
src/tray/: linux.rs  macos.rs
