[package]
name = "pester"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/aloglu/pester"
description = "A cross-platform reminder daemon that keeps reminding you until you explicitly mark reminders done."

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4.4", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Data_Xml_Dom",
  "UI_Notifications",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSSet", "NSString", "NSError", "NSDate", "NSRunLoop", "NSObjCRuntime", "NSObject"] }
objc2-user-notifications = { version = "0.3", features = ["UNNotification", "UNNotificationAction", "UNNotificationCategory", "UNNotificationResponse"] }
